[workspace]
members = [
    "ethers-util",
    "strings",
]
resolver = "2"

[profile.dev]
panic = "unwind"
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "unwind"
overflow-checks = false

[workspace.dependencies]
ethers = "2.0.11"
revm = "3.5.0"
regex = "1.10.2"
